fixed spacing on the bottom of the page

--- a/style.css
+++ b/style.css
@@ -14,11 +14,12 @@ body {
 	align-items: center;
 }
 
-.row1, .row2, .row3 {
-	height: 33%;
+.table-item {
+	object-fit: contain;
 	display: flex;
 	flex-direction: column;
-	align-items: left;
+	width: 65%;
+	height: 40%;
 }
 
 h1, h2 {
